syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

package backend;

service Spider {
  rpc Search (SearchRequest) returns (SearchReply) {
    option (google.api.http) = {
      post: "/v1/spider/items"
      body: "*"
    };
  }
}

message Item {
  string title = 1;
  string url = 2;
  string tag = 3;
  google.protobuf.Timestamp time = 4;
  repeated string baidu = 5;
  repeated string magnet = 6;
  repeated string link = 7;
}

message SearchRequest {
  string type = 1;
  string keyword = 2;
  int32  page = 3;
  int32  pageSize = 4;
}

message SearchReply {
  repeated Item data =1 ;
}
